Prepare site for AdSense review readiness

--- a/about.html
+++ b/about.html
@@ -2,12 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://future-salary-test.pages.dev/about.html">
     <title>미래 월급 테스트 - 서비스 소개</title>
     <meta name="description" content="미래 월급 테스트의 개발 동기, AI 관상 분석 원리, 서비스 이용 방법, 그리고 개인정보 처리 방침에 대해 자세히 알아보세요.">
     <meta name="keywords" content="미래 월급 테스트, 서비스 소개, 개발 동기, AI 관상, 관상 분석 원리, 사용 방법, 개인정보 보호, Teachable Machine, TensorFlow.js">
@@ -64,12 +66,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <section class="info-section">
-            <h2>🎥 관련 유튜브 영상</h2>
-            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000;">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-            </div>
-            <p style="text-align: center; margin-top: 10px; color: #555; font-size: 0.9em;">
-                (참고: 위 영상은 예시입니다. 실제 서비스와 직접적인 관련이 없을 수 있습니다.)
+            <h2>🧭 운영 원칙</h2>
+            <p>
+                본 서비스는 재미를 위한 콘텐츠를 제공하되, 사용자의 개인정보 보호를 최우선으로 합니다.
+                결과는 엔터테인먼트 목적이며 실제 소득, 취업, 투자 판단의 근거로 사용할 수 없습니다.
+            </p>
+            <p>
+                또한 블로그 콘텐츠는 관상학 및 AI 관련 주제를 쉽게 풀어 설명하기 위한 정보성 글이며,
+                정기적으로 검토 및 업데이트하고 있습니다.
             </p>
         </section>
 
