--- a/blog.html
+++ b/blog.html
@@ -2,12 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://future-salary-test.pages.dev/blog.html">
     <title>AI 관상 연구소</title>
     <meta name="description" content="미래 월급 테스트 AI 관상 연구소 블로그입니다. 재물운, AI 관상 분석, 성공하는 얼굴 특징 등 관상학 관련 전문 칼럼을 만나보세요.">
     <meta name="keywords" content="AI 관상 연구소, 블로그, 관상학, 재물운, AI 분석, 얼굴 특징, 칼럼, 미래 월급">
