--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://future-salary-test.pages.dev/contact.html">
     <title>미래 월급 테스트 - 문의하기</title>
     <meta name="description" content="미래 월급 테스트 서비스에 대한 문의사항을 보내주세요. 이름, 이메일, 메시지를 작성하여 저희에게 직접 연락할 수 있습니다.">
     <meta name="keywords" content="미래 월급 테스트, 문의, 연락, 고객 지원, 이메일, mailto">
@@ -56,6 +58,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </form>
         <p class="mailto-link-container">
             또는 다음 이메일로 직접 문의하실 수 있습니다: <a href="mailto:rkd743194@gmail.com">rkd743194@gmail.com</a>
+        </p>
+        <p class="mailto-link-container" style="font-size: 0.95em; color: #666;">
+            운영자: 미래 월급 테스트 연구팀 | 일반 문의는 영업일 기준 2~3일 내 답변을 목표로 합니다.
         </p>
     </div>
 
