--- a/post-4.html
+++ b/post-4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex,follow">
     <title>성공하는 사람들의 숨겨진 관상 특징 - 미래 월급 테스트</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
