--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://future-salary-test.pages.dev/privacy.html">
     <title>개인정보처리방침 - 미래 월급 테스트</title>
     <style>
         body {
@@ -106,34 +108,33 @@
         <p>미래 월급 테스트('서비스')는 이용자의 개인정보를 매우 중요하게 생각하며, 「개인정보보호법」, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 등 관련 법규를 준수하고 있습니다.</p>
 
         <h3>1. 개인정보의 수집 및 이용 목적</h3>
-        <p>본 서비스는 별도의 회원 가입 절차 없이 제공되며, 이용자의 개인정보를 직접적으로 수집하거나 저장하지 않습니다. 서비스 이용 과정에서 사용되는 얼굴 데이터는 인공지능 분석 목적으로만 활용되며, 어떠한 경우에도 서버로 전송되거나 저장되지 않습니다.</p>
+        <p>본 서비스는 별도의 회원 가입 없이 제공됩니다. 이름, 주민등록번호 등 식별 가능한 개인정보를 직접 수집하지 않으며, 서비스 운영 및 안정성 확인을 위한 최소한의 접속 정보가 외부 서비스(예: 광고/분석 플랫폼)를 통해 처리될 수 있습니다.</p>
 
         <h3>2. 얼굴 데이터의 처리</h3>
         <ul>
-            <li><strong>얼굴 데이터의 수집:</strong> 이용자가 '미래 월급 테스트'를 위해 사진을 업로드하거나 웹캠으로 촬영하는 경우, 해당 얼굴 데이터는 이용자의 기기(브라우저) 내에서만 처리됩니다.</li>
-            <li><strong>얼굴 데이터의 이용:</strong> 얼굴 데이터는 오직 인공지능 기반의 관상 분석을 통해 미래 월급을 예측하는 용도로만 사용됩니다.</li>
-            <li><strong>얼굴 데이터의 보관 및 파기:</strong> 얼굴 데이터는 서버로 전송되지 않으므로, '서비스'에서 어떠한 얼굴 데이터도 보관하거나 저장하지 않습니다. 분석이 완료되는 즉시 이용자의 기기 메모리에서 삭제됩니다.</li>
+            <li><strong>처리 방식:</strong> 이용자가 업로드한 얼굴 이미지는 브라우저 내에서 인공지능 분석에 사용됩니다.</li>
+            <li><strong>서버 저장 여부:</strong> 서비스 운영 서버는 이용자의 원본 얼굴 이미지를 저장하지 않습니다.</li>
+            <li><strong>이용 목적:</strong> 얼굴 데이터는 결과 산출(미래 월급 테스트) 목적에 한해 처리됩니다.</li>
         </ul>
 
-        <h3>3. 개인정보의 제3자 제공 및 위탁</h3>
-        <p>본 서비스는 이용자의 개인정보 및 얼굴 데이터를 제3자에게 제공하거나 위탁하지 않습니다. 모든 처리 과정은 전적으로 이용자의 기기 내에서만 이루어집니다.</p>
-
-        <h3>4. 이용자의 권리 및 의무</h3>
+        <h3>3. 쿠키 및 외부 서비스 사용</h3>
+        <p>본 서비스는 Google AdSense, Google Tag Manager 등 외부 서비스를 사용할 수 있으며, 해당 서비스는 쿠키 또는 유사 기술을 통해 기기 정보, 이용 기록 등을 처리할 수 있습니다. 이 정보 처리는 각 서비스 제공자의 정책에 따릅니다.</p>
         <ul>
-            <li>이용자는 자신의 얼굴 데이터가 서버로 전송되거나 저장되지 않음을 인지하고 서비스를 이용할 수 있습니다.</li>
-            <li>이용자는 정확한 정보를 제공할 의무가 없으며, 오직 자신의 판단 하에 서비스를 이용할 권리가 있습니다.</li>
+            <li>Google 개인정보처리방침: https://policies.google.com/privacy</li>
+            <li>Google 광고 설정: https://adssettings.google.com</li>
         </ul>
 
-        <h3>5. 개인정보 보호를 위한 기술적, 관리적 대책</h3>
-        <p>본 서비스는 이용자의 개인정보(얼굴 데이터)를 보호하기 위해 다음과 같은 노력을 하고 있습니다:</p>
+        <h3>4. 제3자 제공 및 처리 위탁</h3>
+        <p>서비스는 자체적으로 이용자 얼굴 이미지를 제3자에게 판매/제공하지 않습니다. 다만 광고, 트래픽 분석, 보안 운영을 위해 외부 플랫폼이 기술적으로 데이터를 처리할 수 있습니다.</p>
+
+        <h3>5. 이용자의 권리</h3>
         <ul>
-            <li><strong>클라이언트 측 처리:</strong> 모든 얼굴 데이터 분석은 이용자의 웹 브라우저 내에서 직접 처리되며, 어떠한 정보도 외부 서버로 전송되지 않습니다.</li>
-            <li><strong>보안 통신:</strong> 서비스 웹사이트는 HTTPS 프로토콜을 사용하여 이용자와 웹 서버 간의 통신을 암호화합니다.</li>
-            <li><strong>최소한의 정보 처리:</strong> 서비스 제공에 필요한 최소한의 데이터(얼굴 특징 분석 결과)만을 임시적으로 활용하며, 이 또한 기기 내에서만 이루어집니다.</li>
+            <li>이용자는 쿠키 사용을 브라우저 설정에서 제한 또는 차단할 수 있습니다.</li>
+            <li>이용자는 서비스 이용을 중단함으로써 얼굴 이미지 업로드를 언제든지 중지할 수 있습니다.</li>
         </ul>
 
         <h3>6. 개인정보 처리방침 변경</h3>
-        <p>본 개인정보처리방침은 법령 및 서비스 정책 변경에 따라 변경될 수 있으며, 변경 시에는 웹사이트를 통해 공지합니다. 변경된 개인정보처리방침은 공지일로부터 7일 이후에 효력이 발생합니다.</p>
+        <p>본 개인정보처리방침은 법령 또는 서비스 정책에 따라 변경될 수 있으며, 변경 시 웹사이트를 통해 고지합니다.</p>
 
         <p style="margin-top: 30px; font-size: 0.8em; color: #999;">본 개인정보처리방침은 [2026년 2월 9일]부터 적용됩니다.</p>
     </main>
