--- a/result/growth.html
+++ b/result/growth.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex,follow">
     <title>성장형 관상 결과 - 미래 월급 테스트</title>
     <meta name="description" content="미래 월급 테스트 성장형 관상 결과 페이지입니다. 지금 내 결과를 확인해보세요.">
     <meta property="og:type" content="website">
