--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="canonical" href="https://future-salary-test.pages.dev/terms.html">
     <title>이용약관 - 미래 월급 테스트</title>
     <style>
         body {
@@ -139,6 +141,9 @@
 
         <h3>제8조 (분쟁 해결)</h3>
         <p>본 약관과 관련하여 분쟁이 발생한 경우, 양 당사자는 원만한 해결을 위해 노력하며, 합의가 이루어지지 않을 경우 관련 법령에 따라 해결합니다.</p>
+
+        <h3>제9조 (광고 및 외부 서비스)</h3>
+        <p>서비스는 운영을 위해 Google AdSense 등 외부 광고/분석 서비스를 포함할 수 있습니다. 이용자는 서비스 이용 과정에서 쿠키 기반 광고가 노출될 수 있으며, 세부 내용은 개인정보처리방침을 따릅니다.</p>
 
         <p style="margin-top: 30px; font-size: 0.8em; color: #999;">본 약관은 [2026년 2월 9일]부터 적용됩니다.</p>
     </main>
