Add finance test and expand cross-content links

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <button id="reset-button" style="display:none;">🔄 다시하기</button> <!-- Reset button -->
     </div>
 
+    <section class="card-link-container">
+        <a href="finance-test.html" class="card-link">💹 재테크 성향 테스트</a>
+        <a href="blog.html" class="card-link">📚 AI 관상 연구소 칼럼</a>
+    </section>
+
 
 
 
