chore(seo): add sitemap and unify title/description/canonical

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
     
     <link rel="canonical" href="https://future-salary-test.pages.dev/blog.html">
-    <title>AI 관상 연구소</title>
+    <title>미래 월급 테스트 - AI 관상 연구소</title>
     <meta name="description" content="미래 월급 테스트 AI 관상 연구소 블로그입니다. 재물운, AI 관상 분석, 성공하는 얼굴 특징 등 관상학 관련 전문 칼럼을 만나보세요.">
     <meta name="keywords" content="AI 관상 연구소, 블로그, 관상학, 재물운, AI 분석, 얼굴 특징, 칼럼, 미래 월급">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💰</text></svg>">
