--- a/finance-test.html
+++ b/finance-test.html
@@ -9,8 +9,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NP97WXZD');</script>
     <link rel="canonical" href="https://future-salary-test.pages.dev/finance-test.html">
-    <title>재테크 성향 테스트 - 미래 월급 테스트</title>
-    <meta name="description" content="5문항으로 확인하는 재테크 성향 테스트. 나의 투자 성향을 확인하고 실천 팁을 받아보세요.">
+    <title>미래 월급 테스트 - 재테크 성향 테스트</title>
+    <meta name="description" content="미래 월급 테스트 - 5문항으로 확인하는 재테크 성향 테스트. 나의 투자 성향을 확인하고 실천 팁을 받아보세요.">
     <meta name="keywords" content="재테크 성향 테스트, 투자 성향, 자산관리, 금융 테스트, 소비 습관">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://future-salary-test.pages.dev/finance-test.html">
