--- a/post-1.html
+++ b/post-1.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/post-1.html">
     <meta name="robots" content="noindex,follow">
-    <title>관상학, 역사의 거울에 비친 인간의 욕망 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 관상학, 역사의 거울에 비친 인간의 욕망</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="관상학의 역사와 시대별 변화, 그리고 현대 사회에 미치는 영향에 대해 알아봅니다.">
+    <meta name="description" content="미래 월급 테스트 - 관상학의 역사와 시대별 변화, 그리고 현대 사회에 미치는 영향에 대해 알아봅니다.">
     <meta name="keywords" content="관상학, 관상학 역사, 마의상법, 도선대사, AI 관상">
     <meta property="og:title" content="관상학, 역사의 거울에 비친 인간의 욕망">
     <meta property="og:description" content="관상학의 역사와 시대별 변화, 그리고 현대 사회에 미치는 영향에 대해 알아봅니다.">
