--- a/post-2.html
+++ b/post-2.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/post-2.html">
     <meta name="robots" content="noindex,follow">
-    <title>재물운을 부르는 얼굴 특징: AI는 무엇을 볼까? - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 재물운을 부르는 얼굴 특징: AI는 무엇을 볼까?</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="재물운과 관련된 관상학적 특징들을 살펴보고, AI가 이러한 특징들을 어떻게 분석하고 해석하는지 깊이 있게 다룹니다.">
+    <meta name="description" content="미래 월급 테스트 - 재물운과 관련된 관상학적 특징들을 살펴보고, AI가 이러한 특징들을 어떻게 분석하고 해석하는지 깊이 있게 다룹니다.">
     <meta name="keywords" content="재물운, 얼굴 특징, AI 관상, 관상학, 부자 관상">
     <meta property="og:title" content="재물운을 부르는 얼굴 특징: AI는 무엇을 볼까?">
     <meta property="og:description" content="재물운과 관련된 관상학적 특징들을 살펴보고, AI가 이러한 특징들을 어떻게 분석하고 해석하는지 깊이 있게 다룹니다.">
