--- a/post-4.html
+++ b/post-4.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/post-4.html">
     <meta name="robots" content="noindex,follow">
-    <title>성공하는 사람들의 숨겨진 관상 특징 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 성공하는 사람들의 숨겨진 관상 특징</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="역사 속 성공한 인물들과 현대 리더들의 공통적인 관상 특징을 분석하여, 성공과 관상의 연관성을 조명합니다.">
+    <meta name="description" content="미래 월급 테스트 - 역사 속 성공한 인물들과 현대 리더들의 공통적인 관상 특징을 분석하여, 성공과 관상의 연관성을 조명합니다.">
     <meta name="keywords" content="성공 관상, 리더십, 재물 관리, 소통 능력, AI 관상 분석">
     <meta property="og:title" content="성공하는 사람들의 숨겨진 관상 특징">
     <meta property="og:description" content="역사 속 성공한 인물들과 현대 리더들의 공통적인 관상 특징을 분석하여, 성공과 관상의 연관성을 조명합니다.">
