--- a/post-5.html
+++ b/post-5.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/post-5.html">
     <meta name="robots" content="noindex,follow">
-    <title>미래를 예측하는 AI: 관상학의 새로운 지평 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 미래를 예측하는 AI: 관상학의 새로운 지평</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="인공지능과 관상학의 만남이 가져올 미래에 대한 전망과 함께, 더욱 발전할 AI 관상 분석 기술의 가능성을 논합니다.">
+    <meta name="description" content="미래 월급 테스트 - 인공지능과 관상학의 만남이 가져올 미래에 대한 전망과 함께, 더욱 발전할 AI 관상 분석 기술의 가능성을 논합니다.">
     <meta name="keywords" content="미래 예측 AI, 관상학, 인공지능, 통계적 분석, 윤리적 과제">
     <meta property="og:title" content="미래를 예측하는 AI: 관상학의 새로운 지평">
     <meta property="og:description" content="인공지능과 관상학의 만남이 가져올 미래에 대한 전망과 함께, 더욱 발전할 AI 관상 분석 기술의 가능성을 논합니다.">
