--- a/result/rich.html
+++ b/result/rich.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/result/rich.html">
     <meta name="robots" content="noindex,follow">
-    <title>부자 관상 결과 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 부자 관상 결과</title>
     <meta name="description" content="미래 월급 테스트 부자 관상 결과 페이지입니다. 지금 내 결과를 확인해보세요.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://future-salary-test.pages.dev/result/rich.html">
