--- a/terms.html
+++ b/terms.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="미래 월급 테스트 - 이용약관 페이지입니다.">
     
     <link rel="canonical" href="https://future-salary-test.pages.dev/terms.html">
-    <title>이용약관 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 이용약관</title>
     <style>
         body {
             font-family: 'Malgun Gothic', 'Apple SD Gothic Neo', sans-serif;
