--- a/column.html
+++ b/column.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/column.html">
     <meta name="robots" content="noindex,follow">
-    <title>관상학 칼럼 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - 관상학 칼럼</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="AI가 당신의 미래 월급을 예측해드립니다. 무료 관상 테스트를 통해 당신의 운명적인 연봉을 확인하고, 재물운을 높이는 관상학 칼럼을 확인하세요.">
+    <meta name="description" content="미래 월급 테스트 - AI가 당신의 미래 월급을 예측해드립니다. 무료 관상 테스트를 통해 당신의 운명적인 연봉을 확인하고, 재물운을 높이는 관상학 칼럼을 확인하세요.">
     <meta name="keywords" content="무료 관상 테스트, AI 연봉 예측, 미래 월급, 관상학, 재물운, 운명, 셀카 관상, 얼굴 분석, 연봉 테스트">
     <meta property="og:title" content="AI 미래 월급 테스트">
     <meta property="og:description" content="내 관상으로 보는 미래 연봉은 얼마일까? 지금 바로 확인하세요!">
