--- a/post-3.html
+++ b/post-3.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://future-salary-test.pages.dev/post-3.html">
     <meta name="robots" content="noindex,follow">
-    <title>AI 관상 분석, 단순한 재미를 넘어선 과학적 접근 - 미래 월급 테스트</title>
+    <title>미래 월급 테스트 - AI 관상 분석, 단순한 재미를 넘어선 과학적 접근</title>
     <meta property="og:url" content="https://future-salary-test.pages.dev">
     <meta property="og:type" content="website">
-    <meta name="description" content="AI 기술이 관상 분석에 어떻게 적용되는지, 그리고 방대한 통계 데이터를 통해 어떤 인사이트를 얻을 수 있는지 탐구합니다.">
+    <meta name="description" content="미래 월급 테스트 - AI 기술이 관상 분석에 어떻게 적용되는지, 그리고 방대한 통계 데이터를 통해 어떤 인사이트를 얻을 수 있는지 탐구합니다.">
     <meta name="keywords" content="AI 관상, 인공지능, 머신러닝, 관상학, 과학적 분석, 빅데이터">
     <meta property="og:title" content="AI 관상 분석, 단순한 재미를 넘어선 과학적 접근">
     <meta property="og:description" content="AI 기술이 관상 분석에 어떻게 적용되는지, 그리고 방대한 통계 데이터를 통해 어떤 인사이트를 얻을 수 있는지 탐구합니다.">
